Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 </div>
             </div>
 
-            <span class="block font-script text-3xl md:text-5xl text-marcia-gold mb-4 animate-slide-up" style="animation-delay: 0.2s">Nossa Arquiteta de Conhecimento</span>
+            <span class="block font-script text-3xl md:text-5xl text-marcia-gold mb-4 animate-slide-up" style="animation-delay: 0.2s">Nossa Engenheira de Conhecimento</span>
             
             <h1 class="font-serif text-5xl md:text-7xl font-bold text-slate-900 mb-6 leading-tight animate-slide-up" style="animation-delay: 0.3s">
                 Professora <span class="gradient-text">Marcia</span>
@@ -577,4 +577,5 @@
         }
     </script>
 </body>
+
 </html>
